@@ -1,3 +1,6 @@
+[B]1.0.22[/B]
+- Főoldal megjelenítése
+- Pozíció/nézettség betöltés/mentés támogatása az RTL+-tól/felé
 [B]1.0.21[/B]
 - login javítása
 - új API endpoint használata
